Tue Jul 11 12:12:01 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BiDir_GIOP/diffs/BiDirPolicy.diff:
        * tao/CodecFactory/diff/IOP_Codec.diff:
        * tao/IORInterceptor/diff/IORInterceptor.diff:
        * tao/IORTable/diff/IORTable.diff:
        * tao/ObjRefTemplate/diffs/ObjectReferenceTemplate.diff:
        * tao/RTPortableServer/diffs/RTPortableServer.diff:
          Removed, not needed anymore

        * tao/RTPortableServer.mpc:
          Enabed regeneration of the pidl files

        * tao/RTPortableServer/RTPortableServerA.cpp:
        * tao/RTPortableServer/RTPortableServerC.cpp:
        * tao/RTPortableServer/RTPortableServerC.h:
        * tao/RTPortableServer/RTPortableServerS.h:
          Removed from the repo

Tue Jul 11 12:07:01 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode.mpc:
          Enabled regeneration of the pidl files

        * tao/AnyTypeCode/TypeCode.h:
          Added include that was first pulled in indirectly

        * tao/AnyTypeCode/AnySeqA.cpp
        * tao/AnyTypeCode/AnySeqA.h
        * tao/AnyTypeCode/AnySeqC.cpp
        * tao/AnyTypeCode/AnySeqC.h
        * tao/AnyTypeCode/AnySeqS.h
        * tao/AnyTypeCode/BoundsA.cpp
        * tao/AnyTypeCode/BoundsA.h
        * tao/AnyTypeCode/BoundsC.cpp
        * tao/AnyTypeCode/BoundsC.h
        * tao/AnyTypeCode/Dynamic_ParameterA.cpp
        * tao/AnyTypeCode/Dynamic_ParameterA.h
        * tao/AnyTypeCode/Dynamic_ParameterC.cpp
        * tao/AnyTypeCode/Dynamic_ParameterC.h
        * tao/AnyTypeCode/ValueModifierA.cpp
        * tao/AnyTypeCode/ValueModifierA.h
        * tao/AnyTypeCode/ValueModifierC.cpp
        * tao/AnyTypeCode/ValueModifierC.h
        * tao/AnyTypeCode/ValueModifierS.h
        * tao/AnyTypeCode/VisibilityA.cpp
        * tao/AnyTypeCode/VisibilityA.h
        * tao/AnyTypeCode/VisibilityC.cpp
        * tao/AnyTypeCode/VisibilityC.h
        * tao/AnyTypeCode/VisibilityS.h